fixed issue with logged out twitter btn alignment

--- a/app/assets/stylesheets/social_media_side.css.scss
+++ b/app/assets/stylesheets/social_media_side.css.scss
@@ -19,7 +19,7 @@
   }
 }
 
-#twitter-widget-0 {
+#twitter-widget-0, #twitter-widget-1 {
   position: relative;
   top: 2px;
 }
